--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <p class="vivolet">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
           <div class="radio1">
             <input type="radio" name="radio" id="radio1" class="radio">
-            <label for="radio1" class="radioart">
+            <div class="radioart">
               <p style="width: 90%; font-size: 13px;">30 minute walk</p>
               <p style="width: 10%; font-size: 14px; font-weight: bolder;">29$</p>
-            </label>
+            </div>
           </div>
           <div class="radio2">
             <input type="radio" class="radio" id="radio2" name="radio">
