--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
           </div>
           <p class="vivolet">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
           <div class="radio1">
-            <input type="radio" name="radio" id="radio1" class="radio">
+            <input type="radio" name="radio" id="radio1" class="radio"><label for="radio1"></label>
             <div class="radioart">
               <p style="width: 90%; font-size: 13px;">30 minute walk</p>
               <p style="width: 10%; font-size: 14px; font-weight: bolder;">29$</p>
             </div>
           </div>
           <div class="radio2">
-            <input type="radio" class="radio" id="radio2" name="radio">
+            <input type="radio" class="radio" id="radio2" name="radio"><label for="radio2"></label>
             <div class="radioart">
               <p style="width: 90%; font-size: 13px;">1 hour walk</p>
               <p style="width: 10%; font-size: 14px; font-weight: bolder;">49$</p>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="chat">
-          <input type="text">
+          <input type="text" name="texxt"><label for="texxt"></label>
           <i class="fa fa-angle-right"></i>
         </div>
       </div>
